[package]
name = "crazy_jacks_crab_shack"
version = "0.1.0"
edition = "2024"

[dependencies]
render_pipeline_macro = {path = "lib/render_pipeline_macro"}
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.2", features = ["csr"] }
leptos-use = { version = "0.16.2", features = ["use_mouse"]}

[dependencies.web-sys]
version = "0.3"
features = [
    "Event",
    "EventTarget",
    "HtmlElement",
    "MouseEvent",
    "Touch",
    "WebGl2RenderingContext",
    "WebGlActiveInfo",
    "WebGlBuffer",
    "WebGlShader",
    "WebGlTexture",
    "WebGlFramebuffer",
    "WebGlUniformLocation",
    "WebGlProgram",
    "Performance"
]
